<resources>
    <string name="app_name">AndroidMessenger</string>
    <string name="sign_up_success">Sign up success</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm">Confirm</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="send">Send</string>
    <string name="hint_message">Message...</string>
    <string name="edit_profile">Edit profile</string>


    <string name="AddChat">Add chat</string>
    <string name="Add">Add</string>
    <string name="UserNotFound">User not found!</string>
    <string name="DefaultUsername">SimpleUsername</string>
    <string name="DefaultEmail">default@email.com</string>
    <string name="NullPointerFriends">Cannot find friends</string>
</resources>
